added meta data

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,18 +1,55 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Basic Meta -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
 
+    <!-- Title -->
+    <title>IIIT Sonepat | Official Student Portal</title>
+
+    <!-- SEO -->
+    <meta
+      name="description"
+      content="Official student portal of Indian Institute of Information Technology Sonepat. Access academic updates, examination notices, placements, events, and official announcements."
+    />
+    <meta
+      name="keywords"
+      content="IIIT Sonepat, Student Portal, College Notices, Examination Cell, Placement Cell, Academics"
+    />
+    <meta name="author" content="Indian Institute of Information Technology Sonepat" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- Open Graph (Works without fixed domain) -->
+    <meta property="og:title" content="IIIT Sonepat | Official Portal" />
+    <meta
+      property="og:description"
+      content="Access official academic updates, examination notices, placements, and student announcements."
+    />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="IIIT Sonepat | Official Student Portal" />
+    <meta
+      name="twitter:description"
+      content="Official portal for academic notices and student updates."
+    />
+
+    <!-- Favicon (Move logo to /public folder in Vite) -->
+    <link rel="icon" type="image/png" href="/logo.png" />
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
