meta data fixing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,16 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>IIIT Sonepat | Official Student Portal</title>
+    <title>IIIT Sonepat | Official Portal</title>
 
     <!-- SEO -->
     <meta
       name="description"
-      content="Official student portal of Indian Institute of Information Technology Sonepat. Access academic updates, examination notices, placements, events, and official announcements."
+      content="Official portal of Indian Institute of Information Technology Sonepat. Access academic updates, examination notices, placements, events, and official announcements."
     />
     <meta
       name="keywords"
-      content="IIIT Sonepat, Student Portal, College Notices, Examination Cell, Placement Cell, Academics"
+      content="IIIT Sonepat, Portal, College Notices, Examination Cell, Placement Cell, Academics"
     />
     <meta name="author" content="Indian Institute of Information Technology Sonepat" />
     <meta name="robots" content="index, follow" />
@@ -26,16 +26,16 @@
     <meta property="og:title" content="IIIT Sonepat | Official Portal" />
     <meta
       property="og:description"
-      content="Access official academic updates, examination notices, placements, and student announcements."
+      content="Access official academic updates, examination notices, placements, and announcements."
     />
     <meta property="og:type" content="website" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="IIIT Sonepat | Official Student Portal" />
+    <meta name="twitter:title" content="IIIT Sonepat | Official Portal" />
     <meta
       name="twitter:description"
-      content="Official portal for academic notices and student updates."
+      content="Official portal for academic notices and updates."
     />
 
     <!-- Favicon (Move logo to /public folder in Vite) -->
