--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Title -->
-    <title>IIIT Sonepat | Official Portal</title>
+    <title>IIIT Sonepat | Digital Notice-Board</title>
 
     <!-- SEO -->
     <meta
